--- a/Final-Report/main.tex
+++ b/Final-Report/main.tex
@@ -10,37 +10,40 @@
   cleardoublepage=empty
 ]{scrbook}
 
+% Classic Thesis
 \usepackage[linedheaders,parts,pdfspacing]{classicthesis}
-
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{acronym}
 \usepackage[nottoc,numbib]{tocbibind}
-
 \usepackage{geometry}
 \geometry{margin=1in}
 \linespread{1.3}
 
-% New Lines not Indentation for Paragraphs
+% Don't indent new paragraphs. New line instead.
 \usepackage[parfill]{parskip}
 
+% Make references and citations clickable.
 \usepackage{hyperref}
 
-% Styling Contents Page
+% ----------------- %
+% ---- STYLING ---- %
+% ----------------- %
+
+% Contents Page
 \usepackage{tocstyle} 
-%\usetocstyle{classic}
 \newtocstyle[classic][]{newstyle}{%
   \settocfeature[0]{entryhook}{\bfseries}%
 }
 \usetocstyle{newstyle}
 
-
-% Style Headings
+% Headings
 \usepackage{titlesec}
 \usepackage{indentfirst}
 \newlength{\normalparindent}
 \AtBeginDocument{\setlength{\normalparindent}{\parindent}}
 
+% ---- Chapter ---- %
 \titleformat{\chapter}[display]
    	% Format
    	{\huge}
@@ -58,6 +61,7 @@
     [\normalcolor\normalsize\vspace*{.8\baselineskip}\titlerule]
 \titlespacing\chapter{0pt}{0pt}{10pt}[0pt]
   
+% ---- Section ---- %
 \titleformat{\section}[display]
    	% Format
    	{\large\bfseries}
@@ -73,6 +77,7 @@
     []
 \titlespacing\section{0pt}{0pt}{0pt}
 
+% ---- Subsection ---- %
 \titleformat{\subsection}[display]
    	% Format
    	{\small\bfseries}
@@ -98,23 +103,17 @@
 % Font
 \usepackage{fontspec}
 \setmainfont{Quicksand}
-%\usepackage{unicode-math}
-%\setmathfont{Quicksand}
-%\setsansfont{TeX Gyre Heros}[Scale=MatchLowercase]
-%\setmonofont{Inconsolata}[Scale=MatchLowercase]
 
 % Date
 \usepackage{babel}
 \usepackage[]{datetime}
-
 \usepackage{textcase}
 
-% Frame
+% Frame around images.
 \include{xcolor}
 
 % Section References
 \newcommand\sectionreference[1]{\begin{flushleft}\small\textit{#1}\end{flushleft}}
-
 
 \begin{document}
 
@@ -134,11 +133,15 @@
 
 \input{background}
 
-\input{body}
+\input{implementation}
+
+\input{method}
 
 \input{evaluation}
 
-\input{conclusion}
+\input{results}
+
+\input{future}
 
 \bibliography{bibliography}
 \bibliographystyle{plain}
